--- a/src/index.css
+++ b/src/index.css
@@ -9,9 +9,10 @@ body {
   font-family: 'Quicksand', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: radial-gradient(#303b37, #1a1f1d);
+  background: radial-gradient(#343a4e, #1039ac);
   color: #e1eeeb;
   min-height: 100vh;
+  
 }
 
 #header {
@@ -21,8 +22,8 @@ body {
 
 
 #header img {
-  width: 5rem;
-  height: 5rem;
+  width: 15rem;
+  height: 11rem;
   object-fit: contain;
   background-color: transparent;
 }
@@ -36,7 +37,7 @@ body {
   max-width: 30rem;
   margin: 2rem auto;
   border-radius: 4px;
-  background: linear-gradient(180deg, #307e6c, #2b996d);
+  background: linear-gradient(180deg, #272d64, #4068c0);
 }
 
 .input-group {
@@ -49,7 +50,7 @@ body {
   display: block;
   margin-bottom: 0.25rem;
   font-family: 'Roboto Condensed', sans-serif;
-  font-size: 0.5rem;
+  font-size: 0.7rem;
   font-weight: bold;
   text-transform: uppercase;
 }
@@ -57,10 +58,10 @@ body {
 #user-input input {
   width: 100%;
   padding: 0.5rem;
-  border: 1px solid #76c0ae;
+  border: 1px solid #645bdb;
   border-radius: 0.25rem;
   background-color: transparent;
-  color: #c2e9e0;
+  color: #ccd5fc;
   font-size: 1rem;
 }
 
@@ -74,14 +75,14 @@ body {
 }
 
 #result thead {
-  font-size: 0.7rem;
-  color: #83e6c0;
+  font-size: 0.9rem;
+  color: #ccd5fc;
 }
 
 #result tbody {
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 0.85rem;
-  color: #c2e9e0;
+  color: #ccd5fc;
 }
 
 .center {
